$Id: CHANGES,v 1.52 2005/12/30 08:54:02 psavola Exp $

12/30/2005	Fix a couple of  IPv6 Ready Logo Phase-2 IPv6 Core
		Protocols Self Test issues, patches from Yoshifuji
		Hideaki / USAGI.

11/13/2005	Create a short FAQ in README file.

10/28/2005	Get interface MTU automatically, so that you can
		use jumboframes and advertise MTU >1500.

10/19/2005	Release 0.9.

10/18/2005	Transfer sole maintainership of radvd to Pekka Savola.

10/18/2005	Make the radvd.conf syntax dump default
		in radvdump and remove the previous default to
		reduce code duplication.

09/28/2005	Add NEMO Basic support (RFC3961) and fix default
		HomeAgentLifetime, from Ville Nuorvala.

08/18/2005	Implement more robust timer handler, especially
		because some Linux kernels don't seem to behave
		all that well; see http://lkml.org/lkml/2005/4/29/163.
		Based on extensive testing & reports by
		Tomasz Grobelny.  NB: the bug report was caused by
		a bad timer patch in PLD's kernel package, and this
		should not occur often with standard kernels.

07/24/2005	Implement a new logging method "stderr_syslog" which is
		now also the default.  Everything is logged on syslog,
		while the most important messages (i.e., start-up failures)
		are also logged on stderr.

07/08/2005	Release 0.8.

07/05/2005	Change the more-specific route ND option code
		from de-facto '9' to the official '24'.  Change
		back in defaults.h if you need old behaviour.

07/05/2005	Fix wrongly calculated prefix with Base6to4Interface
                on ppc and maybe other big endian arches, from
		Debian #301543 by Sam Hathaway.

07/05/2005	Fix Linux-2.6.12-bk4+ error with HUP signal,
		from YOSHIFUJI Hideaki / USAGI.

03/29/2005	Merge a part of MIPv6/non-MIPv6 code, make printing
		error messages nicer.

03/22/2005	Be a bit more informative about config file parsing
		errors.

02/21/2005	Release 0.7.3.

02/19/2005	Fix crash when reloading config with AdvSendAdvert off.

02/15/2005	Merge a few fixes and improvements from USAGI: