@@ -1,5 +1,5 @@
 /*
- *   $Id: pathnames.h,v 1.7 2005/12/30 09:46:50 psavola Exp $
+ *   $Id: pathnames.h,v 1.8 2005/12/30 15:13:11 psavola Exp $
  *
  *   Authors:
  *    Pedro Roque		<roque@di.fc.ul.pt>
